@@ -4,6 +4,7 @@ based on code by anotak, CodeImp, MaxED, boris_i, ZZYZX
 version 2.1.3.10
 =====================
 - fixed newly drawn geometry merging incorrectly in rare circumstances
+- fixed inconsistent behavior when drawing new geometry counterclockwise to more resemble the DB2 behavior
 - fixed some weirdnesses with the Map Options screen if you had the first game config selected (Boom by default)
 - when you alt-tab back into the script editor, the keyboard focus goes to the text box as expected
 - when you Save As, the filename is filled in already with the current one
